ajout de  configurations de selectionneur dans le main et draft pour la methode selectionner des n premiers

--- a/src/MiniProjet/.gitignore
+++ b/src/MiniProjet/.gitignore
@@ -13,3 +13,16 @@
 /ComparateurExact.class
 /SelectionneurNPremiers.class
 /SelectionnerAvecSeuil.class
+/ComparateurNGram.class
+/CoupleDeNom.class
+/CoupleNomsScore.class
+/EntiteNom.class
+/GenerateurDeTousLesCouples.class
+/GenerateurParTaille.class
+/NomScore.class
+/PretraiteurMinuscule.class
+/PretraiteurPhonetique.class
+/PretraiteurSansAccents.class
+/PretraiteurSansCaracteresSpeciaux.class
+/SelectionneurAvecSeuil.class
+/SelectionneurDeTousLesResultats.class
