mise à jour de methode effectuerRecherche

--- a/src/MiniProjet/.gitignore
+++ b/src/MiniProjet/.gitignore
@@ -26,3 +26,5 @@
 /PretraiteurSansCaracteresSpeciaux.class
 /SelectionneurAvecSeuil.class
 /SelectionneurDeTousLesResultats.class
+/ResultatDeMatching.class
+/SelectionneurNPremiers$1.class
