ajout de comparateur jaro et livenstein et pretraiteur sans caracteresSpeciaux

--- a/src/MiniProjet/.gitignore
+++ b/src/MiniProjet/.gitignore
@@ -29,3 +29,5 @@
 /ResultatDeMatching.class
 /SelectionneurNPremiers$1.class
 /GenerateurAleatoire.class
+/ComparateurLevenstein.class
+/comparateurJaroWinkler.class
